Closed Bug 1319190 Opened 8 years ago Closed 8 years ago

Intermittent Assertion failure: NS_GetCurrentThread() == mThread, at c:/builds/moz2_slave/autoland-w64-d-000000000000000/build/src/dom/media/ipc/VideoDecoderChild.cpp:262

Categories

(Core :: Audio/Video: Playback, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla53
Tracking Status
firefox50 --- unaffected
firefox51 --- unaffected
firefox52 --- disabled
firefox53 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: mattwoodrow)

References

Details

(Keywords: assertion, intermittent-failure)

Attachments

(1 file)

Filed by: rvandermeulen [at] mozilla.com

https://treeherder.mozilla.org/logviewer.html#?job_id=6957756&repo=autoland

https://archive.mozilla.org/pub/firefox/tinderbox-builds/autoland-win64-debug/1479752460/autoland_win8_64-debug_test-mochitest-gl-e10s-2-bm119-tests1-windows-build0.txt.gz

Win8 e10s tests were enabled in production today. This appears to be hitting semi-frequently in mochitest-gl on debug builds.
Assertion was added in bug 1288618.
Blocks: 1288618
Flags: needinfo?(matt.woodrow)
Keywords: assertion
Summary: Intermittent Assertion failure: NS_GetCurrentThread() == mThread, at dom/media/ipc/VideoDecoderChild.cpp:262 → Intermittent Assertion failure: NS_GetCurrentThread() == mThread, at c:/builds/moz2_slave/autoland-w64-d-000000000000000/build/src/dom/media/ipc/VideoDecoderChild.cpp:262
Assignee: nobody → matt.woodrow
Flags: needinfo?(matt.woodrow)
Attachment #8812978 - Flags: review?(dvander)
Comment on attachment 8812978 [details] [diff] [review]
last-ref-manager-thread

Review of attachment 8812978 [details] [diff] [review]:
-----------------------------------------------------------------

::: dom/media/ipc/RemoteVideoDecoder.cpp
@@ +37,5 @@
>    // task queue for the VideoDecoderChild thread to keep
>    // it alive until we send the delete message.
>    RefPtr<VideoDecoderChild> actor = mActor;
> +
> +  RefPtr<Runnable> task = NS_NewRunnableFunction([actor]() {

could simply capture mActor here and not do with a temporary variable.
Attachment #8812978 - Flags: review?(dvander) → review+
Pushed by mwoodrow@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/7f1f9e61f4f1
Make sure we release the last VideoDecoderChild ref on the video manager thread. r=dvander
https://hg.mozilla.org/mozilla-central/rev/7f1f9e61f4f1
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: