Bug 1319190 - Make sure we release the last VideoDecoderChild ref on the video manager thread. r=dvander